--- a/frontend/src/app/card-search/card-search.component.html
+++ b/frontend/src/app/card-search/card-search.component.html
@@ -1,24 +1,51 @@
 <!-- card query -->
 <div class="form-container">
-  <form class="form">
+
+  <form 
+    class="form"
+    (submit)="onFindCards(query)"
+     #query="ngForm">
+
     <mat-form-field class="example-full-width">
+      
       <mat-label>Find Pokemon</mat-label>
-      <input type="text" matInput placeholder="Card Name">
+      <input 
+        matInput
+        type="text" 
+        name="pokemon"
+        placeholder="Card Name"
+        ngModel>
+
     </mat-form-field>
+
+    <button 
+    mat-raised-button 
+    color="primary"
+    type="submit"
+    style="display:none">Search</button>  
   </form>
+
+</div>
+<mat-divider style="padding-bottom: 14px;"></mat-divider>
+
+<!-- Filler until search is performed -->
+<div *ngIf="pokemon == ''" class="filler-content">
+  <h1>This is filler</h1>
+  <p></p>
+  <h2>Add some helpful text</h2>
 </div>
 
 <!-- Store card data -->
-<mat-divider style="padding-bottom: 14px;"></mat-divider>
-<div class="content">
+<div *ngIf="tempCard.pokemon!=''" class="content">
+  <h1>Results for {{ pokemon }}:</h1>
   <div fxLayout="row wrap" fxLayoutGap="32px grid">
     <div fxFlex="20%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let num of [1,2,3,4,5,6,7,8,9,10]">
       <mat-card class="pk-card">
         <mat-card-header>
-          <mat-card-title>Pikachu</mat-card-title>
-          <mat-card-subtitle>Electric</mat-card-subtitle>
+          <mat-card-title>{{ tempCard.pokemon }}</mat-card-title>
+          <mat-card-subtitle if>{{ tempCard.types[0] }}</mat-card-subtitle>
         </mat-card-header>
-        <img class="inner-card" mat-card-image src="https://images.pokemontcg.io/swsh4/44.png" alt="Photo of Pikachu Card">
+        <img *ngIf="tempCard.img != ''" class="inner-card" mat-card-image src={{tempCard.img}} alt="Photo of {{tempCard.pokemon}} Card">
         <mat-card-actions>
           <button mat-mini-fab color="accent" class="add-btn">
             <mat-icon>add</mat-icon>
