--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <!-- header -->
-<mat-toolbar class="toolbar" color="accent">
+<mat-toolbar class="toolbar" color="primary">
 
   <!-- Site menu -->
   <button [matMenuTriggerFor]="menu" mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
