--- a/frontend/src/app/card-search/card-search.component.html
+++ b/frontend/src/app/card-search/card-search.component.html
@@ -8,7 +8,7 @@
 
     <mat-form-field class="example-full-width">
       
-      <mat-label>Find Pokemon</mat-label>
+      <mat-label>Find Card</mat-label>
       <input 
         matInput
         type="text" 
@@ -36,22 +36,22 @@
 </div>
 
 <!-- Store card data -->
-<div *ngIf="tempCard.pokemon!=''" class="content">
-  <h1>Results for {{ pokemon }}:</h1>
+<div class="content">
+  <h1 *ngIf="cards.length > 0">Results for {{ pokemon }}:</h1>
   <div fxLayout="row wrap" fxLayoutGap="32px grid">
-    <div fxFlex="20%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let num of [1,2,3,4,5,6,7,8,9,10]">
+    <div fxFlex="20%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let card of cards">
       <mat-card class="pk-card">
         <mat-card-header>
-          <mat-card-title>{{ tempCard.pokemon }}</mat-card-title>
-          <mat-card-subtitle if>{{ tempCard.types[0] }}</mat-card-subtitle>
+          <mat-card-title>{{ card.pokemon }}</mat-card-title>
+          <mat-card-subtitle>{{ card.types[0] }}</mat-card-subtitle>
         </mat-card-header>
-        <img *ngIf="tempCard.img != ''" class="inner-card" mat-card-image src={{tempCard.img}} alt="Photo of {{tempCard.pokemon}} Card">
+        <img *ngIf="card.img != ''" class="inner-card" mat-card-image src={{card.img}} alt="Photo of {{card.pokemon}} Card">
         <mat-card-actions>
           <button mat-mini-fab color="accent" class="add-btn">
             <mat-icon>add</mat-icon>
           </button>
-          <span class="card-spacer"></span>
-          <button mat-button>INFO</button>
+          <div fxFlex></div>
+          <button class="card-info-btn" mat-button>INFO</button>
         </mat-card-actions>
       </mat-card>
     </div>
