--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -28,9 +28,14 @@
       <mat-icon>view_module</mat-icon>
       <span>My Deck</span>
     </button>
-    <button mat-menu-item>
+    <button mat-menu-item *ngIf="auth == false">
       <mat-icon>login</mat-icon>
       <span>Log In</span>
+    </button>
+    <mat-divider ></mat-divider>
+    <button mat-menu-item (click)="onLogOut()">
+      <mat-icon>exit_to_app</mat-icon>
+      <span>Log Out</span>
     </button>
 
   </mat-menu>
